--- a/src/Calculator/Views/CalculatorProgrammerRadixOperators.xaml
+++ b/src/Calculator/Views/CalculatorProgrammerRadixOperators.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:common="using:CalculatorApp.Common"
              xmlns:controls="using:CalculatorApp.Controls"
+             xmlns:converters="using:CalculatorApp.Converters"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="using:CalculatorApp"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,6 +13,10 @@
              Loaded="OnLoaded"
              Unloaded="OnUnloaded"
              mc:Ignorable="d">
+    <UserControl.Resources>
+        <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <converters:BooleanToVisibilityNegationConverter x:Key="BooleanToVisibilityNegationConverter"/>
+    </UserControl.Resources>
 
     <Grid x:Name="ProgRadixOps">
         <Grid.RowDefinitions>
@@ -120,19 +125,6 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-
-        <Grid x:Name="StorageSpace" Visibility="Collapsed">
-
-            <controls:CalculatorButton x:Name="clearEntryButton"
-                                       x:Uid="clearEntryButton"
-                                       Grid.Column="0"
-                                       Style="{StaticResource OperatorButtonStyle}"
-                                       FontSize="12"
-                                       FontWeight="SemiBold"
-                                       AutomationProperties.AutomationId="clearEntryButton"
-                                       ButtonId="ClearEntry"
-                                       Content="CE"/>
-        </Grid>
 
         <controls:OverflowListView Grid.ColumnSpan="5">
             <Button x:Name="BitwiseButton" Style="{StaticResource OverflowButtonStyle}">
@@ -488,7 +480,17 @@
                                        FontWeight="SemiBold"
                                        AutomationProperties.AutomationId="clearButton"
                                        ButtonId="Clear"
-                                       Content="C"/>
+                                       Content="C"
+                                       Visibility="{x:Bind Model.IsInputEmpty, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+            <controls:CalculatorButton x:Name="clearEntryButton"
+                                       x:Uid="clearEntryButton"
+                                       Style="{StaticResource OperatorButtonStyle}"
+                                       FontSize="12"
+                                       FontWeight="SemiBold"
+                                       AutomationProperties.AutomationId="clearEntryButton"
+                                       ButtonId="ClearEntry"
+                                       Content="CE"
+                                       Visibility="{x:Bind Model.IsInputEmpty, Mode=OneWay, Converter={StaticResource BooleanToVisibilityNegationConverter}}"/>
             <controls:CalculatorButton x:Name="backSpaceButton"
                                        x:Uid="backSpaceButton"
                                        Grid.Column="1"
