--- a/src/Calculator/Views/CalculatorScientificOperators.xaml
+++ b/src/Calculator/Views/CalculatorScientificOperators.xaml
@@ -671,11 +671,13 @@
             </Grid.ColumnDefinitions>
             <controls:CalculatorButton Name="clearEntryButton"
                                        x:Uid="clearEntryButton"
+                                       Grid.Column="1"
                                        Style="{StaticResource OperatorButtonStyle}"
                                        FontSize="16"
                                        AutomationProperties.AutomationId="clearEntryButton"
                                        ButtonId="ClearEntry"
-                                       Content="CE"/>
+                                       Content="CE"
+                                       Visibility="{x:Bind Model.IsInputEmpty, Mode=OneWay, Converter={StaticResource BooleanToVisibilityNegationConverter}}"/>
             <controls:CalculatorButton x:Name="clearButton"
                                        x:Uid="clearButton"
                                        Grid.Column="1"
@@ -683,7 +685,8 @@
                                        FontSize="16"
                                        AutomationProperties.AutomationId="clearButton"
                                        ButtonId="Clear"
-                                       Content="C"/>
+                                       Content="C"
+                                       Visibility="{x:Bind Model.IsInputEmpty, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}"/>
             <controls:CalculatorButton x:Name="backSpaceButton"
                                        x:Uid="backSpaceButton"
                                        Grid.Column="2"
